--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "animate.css": "^4.1.1",
     "react": "^19.1.1",
+    "react-animations": "^1.0.0",
     "react-dom": "^19.1.1",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
